# easy-recipe

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  start.sh
easy_recipe/: asgi.py  settings.py  urls.py  wsgi.py
home/templates/home/: index.html
ingredients/: forms.py  models.py  urls.py  views.py
ingredients/migrations/: 0001_initial.py
ingredients/static/ingredients/: index.css  styles.css
ingredients/templates/ingredients/: add_ingredient.html  edit_ingredient.html  index.html  ingredient_details.html
recipes/: helpers.py  models.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_ingredients_alter_recipe_name.py  0003_alter_recipeingredient_amount.py
recipes/templates/recipes/: add_recipe.html  edit_recipe.html  index.html  recipe_details.html
