[tool.poetry]
name = "easy-recipe"
version = "0.1.0"
description = "Web application to help users to manage ingredients and recipes"
authors = ["Felipe Tomaz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
django-money = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
